tera/src/snapshot_tests/snapshots/tera__snapshot_tests__build_errors__build_errors@mixed_unknown.txt.snap
---
source: tera/src/snapshot_tests/build_errors.rs
expression: "&err"
input_file: tera/src/snapshot_tests/build_errors/mixed_unknown.txt
---
error: Unknown filter `unknown_filter`
 --> tpl:1:11
  |
1 | {{ name | unknown_filter }}
  |           ^^^^^^^^^^^^^^

error: Unknown component `unknown_component`
 --> tpl:2:3
  |
2 | {{<unknown_component />}}
  |   ^^^^^^^^^^^^^^^^^^^^^

error: Unknown function `unknown_func`
 --> tpl:3:4
  |
3 | {{ unknown_func() }}
  |    ^^^^^^^^^^^^^^
